Fixed alignment of .task-meta-entry elements
Ticket: #11302

--- a/pub/System/TasksAPIPlugin/src/scss/_panel.scss
+++ b/pub/System/TasksAPIPlugin/src/scss/_panel.scss
@@ -564,6 +564,7 @@ div[name="comment"] {
   background-color: $white;
   max-width: 100%;
   padding-bottom: 12px;
+  width: 100%;
 
   > i {
     color:$grey;
@@ -575,6 +576,7 @@ div[name="comment"] {
 
   > div {
     max-width: inherit;
+    width: inherit;
   }
 
   > div span {
